expand height of "Data Selection"-dropdown

--- a/src/app/data-explorer/explorer/explorer.css
+++ b/src/app/data-explorer/explorer/explorer.css
@@ -61,3 +61,7 @@
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+::ng-deep .mat-select-panel {
+    max-height: 70vh !important;
+}
