#311: Add loading screen to indicate status of initial startup

--- a/src/scss/sp/main.scss
+++ b/src/scss/sp/main.scss
@@ -12,6 +12,10 @@
   }
 }
 
+md-progress-linear.md-accent .md-container {
+  background-color: rgb(168, 168, 168);
+}
+
 .gu-mirror {
   display: none; /* This fixes a bug with the dragular framework */
 }
