--- a/ui/src/app/editor/components/mappingnary/mappingnary.tmpl.html
+++ b/ui/src/app/editor/components/mappingnary/mappingnary.tmpl.html
@@ -6,7 +6,8 @@
         Select none
     </sp-button>
 </div>
-<div ng-repeat="property in ctrl.availableProperties | displayRecommendedFilter: ctrl.staticProperty.properties.propertyScope:displayRecommended">
+<div
+        ng-repeat="property in ctrl.availableProperties | displayRecommendedFilter: ctrl.staticProperty.properties.propertyScope:ctrl.displayRecommended">
     <md-checkbox ng-checked="ctrl.exists(property, ctrl.staticProperty)"
                  ng-click="ctrl.toggle(property, ctrl.staticProperty)" name="{{property.properties.elementId}}">
         <div ng-if="property.properties.label"><b>{{property.properties.label}}</b> <i>({{property.properties.description}},
