data explorer improvement - add data explorer short time selection: 1 hour - line chart reload data if zooming

--- a/ui/src/app/core-ui/linechart/lineChart.component.html
+++ b/ui/src/app/core-ui/linechart/lineChart.component.html
@@ -16,7 +16,8 @@
                 *ngIf="dataToDisplay !== undefined"
                 flex
                 [data]="dataToDisplay"
-                [layout]="graph.layout">
+                [layout]="graph.layout"
+                (relayout)="zoomIn($event)">
         </plotly-plot>
 
         <div *ngIf="enablePaging" fxFlex="5">
