--- a/ui/src/app/pipeline-details/components/actions/pipeline-actions.tmpl.html
+++ b/ui/src/app/pipeline-details/components/actions/pipeline-actions.tmpl.html
@@ -67,7 +67,7 @@
                 </md-button>
             </div>
             <div flex="30">
-            <md-button ng-if="!ctrl.VersionService.isEnterpriseEdition()" ng-click="ctrl.PipelineOperationsService.showLogs(ctrl.pipeline._id)" class="md-button">
+            <md-button ng-click="ctrl.PipelineOperationsService.showLogs(ctrl.pipeline._id)" class="md-button">
                 <md-icon
                         md-svg-icon="action:ic_info_24px"
                         aria-label="Logs" class="md-accent"></md-icon>
