--- a/ui/src/app/connect/static-properties/static-secret-input/static-secret-input.component.html
+++ b/ui/src/app/connect/static-properties/static-secret-input/static-secret-input.component.html
@@ -16,19 +16,14 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="90" fxLayout="row">
-    <div fxFlex="20">
-        <p>{{staticProperty.label}}: </p>
-    </div>
+<div id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex fxLayout="row">
         <form [formGroup]="secretForm">
-            <mat-form-field fxFlex>
-                <input type="password" fxFlex matInput
-                       formControlName="secretStaticProperty"
-                       id="{{ 'input-' + staticProperty.label.toLowerCase() }}" [placeholder]="staticProperty.label"
-                       [(ngModel)]="staticPropertyUtil.asSecretStaticProperty(staticProperty).value"
-                       (ngModelChange)="valueChange(staticPropertyUtil.asSecretStaticProperty(staticProperty).value)"
+            <mat-form-field fxFlex >
+                <input type="password" fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asSecretStaticProperty(staticProperty).value"
+                       formControlName="secretStaticProperty" (ngModelChange)="valueChange(staticPropertyUtil.asSecretStaticProperty(staticProperty).value)"
                        required (blur)="emitUpdate()">
+                <mat-hint>{{staticProperty.description}}</mat-hint>
 
                 <mat-error *ngIf="!hasInput">
                     {{staticProperty.errorMessage}}
