--- a/ui/src/app/connect/static-properties/static-any-input/static-any-input.component.html
+++ b/ui/src/app/connect/static-properties/static-any-input/static-any-input.component.html
@@ -16,7 +16,31 @@
   ~
   -->
 
-<div fxLayout="column">
-    <p>{{staticProperty.label}}: </p>
-    <mat-checkbox *ngFor="let option of staticProperty.options" [(ngModel)]="option.selected">{{option.name}}</mat-checkbox>
+<div id="formWrapper" fxFlex="100" fxLayout="column">
+    <div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
+        <div>
+            <p>{{staticProperty.label}}: <br>
+                <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+            </p>
+        </div>
+        <mat-checkbox *ngFor="let option of staticProperty.options" [(ngModel)]="option.selected" style="margin-left: 10px;">
+            {{option.name}}
+        </mat-checkbox>
+
+    </div>
+
+    <div *ngIf="staticProperty.horizontalRendering">
+        <mat-form-field style="width: 100%">
+            <mat-label>{{staticProperty.label}}</mat-label>
+            <mat-select multiple>
+                <mat-option *ngFor="let option of staticProperty.options" [value]="option.id"
+                            (click)="select(option.id)">
+                    <label style="font-weight: normal">
+                        {{option.name}}
+                    </label>
+                </mat-option>
+            </mat-select>
+            <mat-hint>{{staticProperty.description}}</mat-hint>
+        </mat-form-field>
+    </div>
 </div>
