--- a/ui/src/app/connect/static-properties/static-free-input/static-free-input.component.html
+++ b/ui/src/app/connect/static-properties/static-free-input/static-free-input.component.html
@@ -16,10 +16,7 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="90" fxLayout="row">
-    <div fxFlex="20">
-    <p>{{staticProperty.label}}: </p>
-    </div>
+<div id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex fxLayout="row">
         <form fxFlex [formGroup]="freeTextForm">
             <mat-form-field fxFlex>
