--- a/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
@@ -16,16 +16,18 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="90" fxLayout="row">
+<div id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex="20">
-    <p>{{staticProperty.label}}: </p>
+        <p>{{staticProperty.label}}: <br>
+            <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+        </p>
     </div>
     <div fxFlex fxLayout="row">
-        <form fxFlex [formGroup]="freeTextForm">
+        <form fxFlex [formGroup]="freeTextForm" style="padding-left: 10px;">
             <mat-form-field fxFlex>
                 <input fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value"
-                    formControlName="freeStaticText" (ngModelChange)="valueChange(staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value)"
-                    required>
+                       formControlName="freeStaticText" (ngModelChange)="valueChange(staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value)"
+                       required>
 
                 <mat-error *ngIf="!hasInput">
                     {{errorMessage}}
