--- a/ui/src/app/connect/static-properties/static-one-of-input/static-one-of-input.component.html
+++ b/ui/src/app/connect/static-properties/static-one-of-input/static-one-of-input.component.html
@@ -16,18 +16,40 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="90" fxLayout="row">
-    <div fxFlex="20">
-        <p>{{staticProperty.label}}: </p>
-    </div>
-    <div fxFlex fxLayout="row">
-        <div fxLayout="column">
-            <mat-radio-button *ngFor="let option of staticProperty.options" style="margin-top: -10px"
-                              (click)="select(option.id)" [checked]="option.selected">
-                <label style="font-weight: normal; padding-top: 8px;">
-                    {{option.name}}
-                </label>
-            </mat-radio-button>
+
+<div id="formWrapper" fxFlex="100" fxLayout="column">
+
+    <div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
+        <div>
+            <p>{{staticProperty.label}}: <br>
+                <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+            </p>
+        </div>
+        <div fxFlex fxLayout="row">
+            <div fxLayout="column" style="margin-left: 10px">
+                <mat-radio-button *ngFor="let option of staticProperty.options" style="margin-top: -10px"
+                                  (click)="select(option.id)" [checked]="option.selected">
+                    <label style="font-weight: normal">
+                        {{option.name}}
+                    </label>
+                </mat-radio-button>
+            </div>
         </div>
     </div>
+
+    <div *ngIf="staticProperty.horizontalRendering">
+        <mat-form-field style="width: 100%">
+            <mat-label>{{staticProperty.label}}</mat-label>
+            <mat-select>
+                <mat-option *ngFor="let option of staticProperty.options" [value]="option.id"
+                            (click)="select(option.id)">
+                    <label style="font-weight: normal">
+                        {{option.name}}
+                    </label>
+                </mat-option>
+            </mat-select>
+            <mat-hint>{{staticProperty.description}}</mat-hint>
+        </mat-form-field>
+    </div>
+
 </div>
