--- a/ui/src/app/connect/static-properties/static-property.component.html
+++ b/ui/src/app/connect/static-properties/static-property.component.html
@@ -74,5 +74,10 @@
                   (inputEmitter)="valueChange($event)">
 </app-static-group>
 
+<app-static-collection *ngIf="isCollectionStaticProperty(staticProperty)"
+                       [adapterId]="adapterId" [eventSchema]="eventSchema"
+                       [staticProperty]="staticProperty" class="test fullWidth"
+                       (inputEmitter)="valueChange($event)" (updateEmitter)="emitUpdate($event)">
+</app-static-collection>
 
 
