--- a/ui/src/app/connect/static-properties/static-runtime-resolvable-any-input/static-runtime-resolvable-any-input.component.html
+++ b/ui/src/app/connect/static-properties/static-runtime-resolvable-any-input/static-runtime-resolvable-any-input.component.html
@@ -16,7 +16,28 @@
   ~
   -->
 
-<div fxLayout="column">
-    <p>{{staticProperty.label}}: </p>
-    <mat-checkbox *ngFor="let option of staticProperty.options" [(ngModel)]="option.selected">{{option.name}}</mat-checkbox>
+
+<div id="formWrapper" fxFlex="100" fxLayout="column">
+
+    <div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
+
+        <p>{{staticProperty.label}}: <br>
+            <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+        </p>
+        <mat-checkbox style="padding-left: 10px" *ngFor="let option of staticProperty.options" [(ngModel)]="option.selected">
+            {{option.name}}
+        </mat-checkbox>
+    </div>
+
+    <div *ngIf="staticProperty.horizontalRendering">
+        <mat-form-field style="width: 100%">
+            <mat-label>{{staticProperty.label}}</mat-label>
+            <mat-select multiple [(ngModel)]="option.selected">
+                <mat-option *ngFor="let option of staticProperty.options" [value]="option">
+                    {{option.name}}
+                </mat-option>
+            </mat-select>
+            <mat-hint>{{staticProperty.description}}</mat-hint>
+        </mat-form-field>
+    </div>
 </div>
