--- a/ui/src/app/connect/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.css
+++ b/ui/src/app/connect/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.css
@@ -16,3 +16,19 @@
  *
  */
 
+::ng-deep .mat-radio-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+    border-color: rgb(27, 20, 100);
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle {
+    background-color: rgb(27, 20, 100);
+}
+
+.description {
+    font-size: 10px;
+}
