--- a/ui/src/app/connect/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
+++ b/ui/src/app/connect/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
@@ -16,24 +16,46 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="90" fxLayout="row">
-    <div fxFlex="20">
-        <p>{{staticProperty.label}}: </p>
+<div id="formWrapper" fxFlex="100" fxLayout="column">
+
+    <div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
+        <div>
+            <p>{{staticProperty.label}}: <br>
+                <mat-hint class="description">{{staticProperty.description}}</mat-hint>
+            </p>
+        </div>
+        <div fxFlex fxLayout="row">
+            <div fxLayout="column" *ngIf="showOptions || staticProperty.options" style="margin-left: 10px">
+                <mat-radio-button *ngFor="let option of staticProperty.options"
+                                  (click)="select(option.id)" [checked]="option.selected">
+                    <label style="font-weight: normal">
+                        {{option.name}}
+                    </label>
+                </mat-radio-button>
+            </div>
+            <div fxLayout="column" *ngIf="!showOptions && !staticProperty.options && !loading">
+                (waiting for input)
+            </div>
+            <div fxLayout="column" *ngIf="loading">
+                <mat-spinner [diameter]="20"></mat-spinner>
+            </div>
+        </div>
     </div>
-    <div fxFlex fxLayout="row">
-        <div fxLayout="column" *ngIf="showOptions || staticProperty.options">
-            <mat-radio-button *ngFor="let option of staticProperty.options"
-                              (click)="select(option.id)" [checked]="option.selected">
-                <label style="font-weight: normal; padding-top: 8px;">
-                    {{option.name}}
-                </label>
-            </mat-radio-button>
-        </div>
-        <div fxLayout="column" *ngIf="!showOptions && !staticProperty.options && !loading">
-            (waiting for input)
-        </div>
-        <div fxLayout="column" *ngIf="loading">
-            <mat-spinner [diameter]="20"></mat-spinner>
-        </div>
+
+    <div *ngIf="staticProperty.horizontalRendering">
+        <mat-form-field style="width: 100%">
+            <mat-label>{{staticProperty.label}}</mat-label>
+            <span matPrefix *ngIf="loading"><mat-spinner style="top:5px" [diameter]="20"></mat-spinner></span>
+            <mat-select>
+                <mat-option *ngFor="let option of staticProperty.options" [value]="option.id"
+                            (click)="select(option.id)">
+                    <label style="font-weight: normal">
+                        {{option.name}}
+                    </label>
+                </mat-option>
+            </mat-select>
+            <mat-hint>{{staticProperty.description}}</mat-hint>
+        </mat-form-field>
     </div>
+
 </div>
