[STREAMPIPES-17] WIP Connect Assets - create endpoints for assets - Connect-UI gets icon from connect-container - support locals for Adapter/Protocols - starts to update Adapters/Protocol with assets and locals

--- a/ui/src/app/connect/data-marketplace/adapter-description/adapter-description.component.html
+++ b/ui/src/app/connect/data-marketplace/adapter-description/adapter-description.component.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div fxLayoutAlign="start center" fxLayout="column" class="icon">
-            <img *ngIf="adapter.iconUrl && !adapter.icon" [src]="'assets/img/connect/' +adapter.iconUrl" class="iconImg"/>
+            <img *ngIf="getIconUrl() && !adapter.icon" [src]="getIconUrl()" class="iconImg"/>
             <img *ngIf="adapter.icon" [src]="adapter.icon" style="min-height: 50px;" class="iconImg"/>
         </div>
         <h3>{{adapter.label}}</h3>
