--- a/ui/src/app/connect/protocol-component/protocol.component.html
+++ b/ui/src/app/connect/protocol-component/protocol.component.html
@@ -16,4 +16,4 @@
   ~
   -->
 
-<app-select-static-properties [adapterId]="protocol.id" [staticProperties]="protocol.config" (validateEmitter)="validateText($event)" id="test"></app-select-static-properties>
+<app-select-static-properties [adapterId]="protocol.appId" [staticProperties]="protocol.config" (validateEmitter)="validateText($event)" id="test"></app-select-static-properties>
