--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
@@ -7,6 +7,6 @@
         </div>
     </div>
     <div class="sp-blue-border" style="height:100%;">
-        <div *ngIf="widget."
+<!--        <div *ngIf="widget."></div>-->
     </div>
 </div>
