--- a/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
@@ -24,9 +24,9 @@
         <form fxFlex [formGroup]="unaryTextForm">
             <mat-form-field class="example-full-width">
                 <!--<mat-form-field class="example-full-width">-->
-                <mat-select [placeholder]="staticProperty.label">
-                    <mat-option *ngFor="let eventProperty of eventSchema.eventProperties" [value]="{'a': staticProperty, 'b': eventProperty}">
-                        {{getName(eventProperty)}}
+                <mat-select [placeholder]="staticProperty.label" [(value)]="staticProperty.selectedProperty">
+                    <mat-option *ngFor="let property of availableProperties " [value]="property.runtimeName">
+                        {{getName(property)}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
