--- a/ui/src/app/dashboard-v2/dialogs/add-visualization-dialog.component.html
+++ b/ui/src/app/dashboard-v2/dialogs/add-visualization-dialog.component.html
@@ -53,10 +53,10 @@
                             [gutterSize]="100">
 
                         <mat-grid-tile class="gray" *ngFor="let widget of availableWidgets">
-                            <div [ngClass]="getSelectedPipelineCss(widget.label)"
+                            <div [ngClass]="getSelectedPipelineCss(widget.widgetLabel)"
                                  (click)="selectWidget(widget)">
-                                {{iconText(widget.label)}}
-                                <h5>{{widget.label}}</h5>
+                                {{iconText(widget.widgetLabel)}}
+                                <h5>{{widget.widgetLabel}}</h5>
                             </div>
                         </mat-grid-tile>
                     </mat-grid-list>
