--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -50,6 +50,7 @@
 @import './sp/mat-tab';
 @import './sp/dialog.ng5';
 @import './sp/feedback.ng1';
+@import './sp/pipeline-assembly.scss';
 
 @import './sp/input.ng1';
 @import './sp/documentation.ng1';
