--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.tmpl.html
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.tmpl.html
@@ -19,38 +19,45 @@
 <div>
     <div class="assemblyOptions sp-blue-bg">
         <div flex="100" layout="row" layout-align="start center">
-            <md-button ng-disabled="!ctrl.pipelineValid"
-                       class="md-icon-button" ng-click="ctrl.submit()" type="submit">
+            <md-button style="display:flex;align-items:center;" class="md-button settings-bar-icon-button"
+            ng-disabled="!ctrl.pipelineValid"
+                       ng-click="ctrl.submit()" type="submit">
                 <md-tooltip md-direction="top">
                     Save Pipeline
                 </md-tooltip>
-                <i class="material-icons">save</i>
+                <div layout="row" layout-align="center center"><i class="material-icons">save</i>&nbsp;Save
+                pipeline</div>
             </md-button>
-            <md-button class="md-icon-button" ng-disabled="!ctrl.selectMode" ng-click="ctrl.toggleSelectMode()">
+            <md-button class="md-icon-button settings-bar-icon-button"
+                       ng-disabled="!ctrl.selectMode"
+                       ng-click="ctrl.toggleSelectMode()">
                 <md-tooltip md-direction="top">
                     Pan
                 </md-tooltip>
                 <i class="material-icons">open_with</i>
             </md-button>
-            <md-button class="md-icon-button" ng-disabled="ctrl.selectMode" ng-click="ctrl.toggleSelectMode()">
+            <md-button class="md-icon-button settings-bar-icon-button" ng-disabled="ctrl.selectMode"
+                       ng-click="ctrl.toggleSelectMode()">
                 <i class="material-icons">mode_edit</i>
                 <md-tooltip md-direction="top">
                     Select
                 </md-tooltip>
             </md-button>
-            <md-button class="md-icon-button" ng-disabled="ctrl.currentZoomLevel == 1" ng-click="ctrl.zoomIn()">
+            <md-button class="md-icon-button settings-bar-icon-button" ng-disabled="ctrl.currentZoomLevel == 1"
+                       ng-click="ctrl.zoomIn()">
                 <i class="material-icons">zoom_in</i>
                 <md-tooltip md-direction="top">
                     Zoom In
                 </md-tooltip>
             </md-button>
-            <md-button class="md-icon-button" ng-disabled="ctrl.currentZoomLevel == 0.5" ng-click="ctrl.zoomOut()">
+            <md-button class="md-icon-button settings-bar-icon-button" ng-disabled="ctrl.currentZoomLevel == 0.5"
+                       ng-click="ctrl.zoomOut()">
                 <i class="material-icons">zoom_out</i>
                 <md-tooltip md-direction="top">
                     Zoom Out
                 </md-tooltip>
             </md-button>
-            <md-button class="md-icon-button" ng-click="ctrl.autoLayout()">
+            <md-button class="md-icon-button settings-bar-icon-button" ng-click="ctrl.autoLayout()">
                 <i class="material-icons">settings_overscan</i>
                 <md-tooltip md-direction="top">
                     Auto Layout
