--- a/ui/src/scss/sp/buttons.ng1.scss
+++ b/ui/src/scss/sp/buttons.ng1.scss
@@ -144,3 +144,13 @@
   color: #cdcdcd;
   background: rgba(0,0,0,0);
 }
+
+.md-button.md-icon-button.settings-bar-icon-button:hover:enabled {
+  background: #a8a8a8;
+}
+
+.settings-bar-icon-button:hover:enabled {
+  background:#a8a8a8;
+  -webkit-transition: all 0.75s ease;
+  transition: all 0.75s ease;
+}
