--- a/ui/src/app/dashboard-v2/dashboard.component.html
+++ b/ui/src/app/dashboard-v2/dashboard.component.html
@@ -2,6 +2,7 @@
     <div fxLayout="row" style="padding:0px;background-color:#f6f6f6;">
         <div fxLayout="fill" style="line-height:24px;border-bottom:1px solid #ccc">
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectDashboard($event)">
+                <mat-tab label="Start"></mat-tab>
                 <mat-tab *ngFor="let dashboard of dashboards" label="{{dashboard.name}}"></mat-tab>
             </mat-tab-group>
         </div>
