STREAMPIPES-58: Add feature to place widgets on dashboard

--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.css
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.css
@@ -1,3 +1,11 @@
 .m-20 {
     margin: 20px;
 }
+
+gridster ::ng-deep {
+    background: white;
+}
+
+gridster.edit ::ng-deep {
+    background: #d3d3d3;
+}
