--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
@@ -1,12 +1,17 @@
 <div fxFlex="100" fxLayout="column" class="m-20">
     <div fxLayout="row wrap" style="margin-bottom:20px;">
-        <button mat-button mat-raised-button color="primary" (click)="addWidget()">Add visualization</button>
+        <button mat-button mat-raised-button color="primary" (click)="toggleEditMode()"
+                style="margin-right:10px;">{{editMode ? 'Save' : 'Edit'}}
+        </button>
+        <button mat-button mat-raised-button color="primary" (click)="addWidget()" [disabled]="!editMode">Add
+            visualization</button>
+
     </div>
 
-    <gridster [options]="options">
+    <gridster [options]="options" [ngClass]="editMode ? 'edit' : ''">
         <ng-container *ngFor="let item of items">
             <gridster-item [item]="item">
-                <dashboard-widget [widget]="item"></dashboard-widget>
+                <dashboard-widget [widget]="item" [editMode]="editMode"></dashboard-widget>
             </gridster-item>
         </ng-container>
     </gridster>
