--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <gridster [options]="options" [ngClass]="editMode ? 'edit' : ''">
-        <ng-container *ngFor="let item of items">
+        <ng-container *ngFor="let item of dashboard.widgets">
             <gridster-item [item]="item">
                 <dashboard-widget [widget]="item" [editMode]="editMode"></dashboard-widget>
             </gridster-item>
