STREAMPIPES-58: Persist dashboard layout changes

--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.css
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.css
@@ -2,10 +2,6 @@
     margin: 20px;
 }
 
-gridster ::ng-deep {
-    background: white;
-}
-
-gridster.edit ::ng-deep {
-    background: #d3d3d3;
+.h-100 {
+    height:100%;
 }
