--- a/ui/src/app/dashboard-v2/dialogs/edit-dashboard/edit-dashboard-dialog.component.html
+++ b/ui/src/app/dashboard-v2/dialogs/edit-dashboard/edit-dashboard-dialog.component.html
@@ -37,6 +37,7 @@
                 <mat-label>Description</mat-label>
                 <input matInput [(ngModel)]="dashboard.description">
             </mat-form-field>
+            <mat-checkbox [(ngModel)]="dashboard.displayHeader">Show name and description in dashboard</mat-checkbox>
 
         </div>
     </div>
