--- a/ui/src/app/dashboard-v2/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard-v2/components/overview/dashboard-overview.component.html
@@ -33,10 +33,34 @@
             <table fxFlex="95" mat-table [dataSource]="dataSource" multiTemplateDataRows>
 
                 <ng-container matColumnDef="name">
-                    <th fxFlex="80" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Dashboard</th>
-                    <td fxFlex="80" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                    <th fxFlex="60" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Dashboard</th>
+                    <td fxFlex="60" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                         {{element.name}}<br/>
                         {{element.description}}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="open">
+                    <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Show</th>
+                    <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                        <div fxLayout="row">
+                            <button mat-button mat-icon-button color="primary"
+                                    (click)="showDashboard(element)">
+                                <i class="material-icons">visibility</i>
+                            </button>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="openWindow">
+                    <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Window</th>
+                    <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                        <div fxLayout="row">
+                            <button mat-button mat-icon-button color="primary"
+                                    (click)="openExternalDashboard(element)">
+                                <i class="material-icons">open_in_new</i>
+                            </button>
+                        </div>
                     </td>
                 </ng-container>
 
