--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
@@ -1,7 +1,7 @@
 <div fxFlex="100" fxLayout="column" class="m-20">
-    <div fxLayout="row wrap" style="margin-bottom:20px;">
-        <button mat-button mat-raised-button color="primary" (click)="toggleEditMode()"
-                style="margin-right:10px;">{{editMode ? 'Save' : 'Edit'}}
+    <div fxLayout="row wrap" style="margin-bottom:20px;" *ngIf="editMode">
+        <button mat-button mat-raised-button color="primary" (click)="updateDashboardAndCloseEditMode()"
+                style="margin-right:10px;">Save
         </button>
         <button mat-button mat-raised-button color="primary" (click)="addWidget()" [disabled]="!editMode">Add
             visualization</button>
