--- a/ui/src/app/dashboard-v2/dashboard.component.html
+++ b/ui/src/app/dashboard-v2/dashboard.component.html
@@ -1,19 +1,31 @@
 <div fxLayout="column" class="page-container">
     <div fxLayout="row" style="padding:0px;background-color:#f6f6f6;">
-        <div fxLayout="fill" style="line-height:24px;border-bottom:1px solid #ccc">
-            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectDashboard($event)">
-                <mat-tab label="Start"></mat-tab>
-                <mat-tab *ngFor="let dashboard of dashboards" label="{{dashboard.name}}"></mat-tab>
-            </mat-tab-group>
+        <div fxFlex="100" style="line-height:24px;border-bottom:1px solid #ccc">
+            <div fxFlex="100" fxLayout="row">
+                <div fxFlex fxLayoutAlign="start center">
+                    <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectDashboard($event)">
+                        <mat-tab label="Start"></mat-tab>
+                        <mat-tab *ngFor="let dashboard of dashboards" label="{{dashboard.name}}"></mat-tab>
+                    </mat-tab-group>
+                </div>
+                <div fxFlex fxLayoutAlign="end center" class="mr-20">
+                <button mat-button mat-icon-button color="primary"
+                        *ngIf="selectedIndex > 0" (click)="toggleEditMode()">
+                    <i class="material-icons">edit</i>
+                </button>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="dashboardsLoaded">
-    <dashboard-overview (reloadDashboardsEmitter)="getDashboards($event)" [dashboards]="dashboards"
+    <dashboard-overview (selectDashboardEmitter)="openDashboard($event)"
+                        (reloadDashboardsEmitter)="getDashboards($event)"
+                        [dashboards]="dashboards"
                         *ngIf="!dashboardTabSelected">
 
     </dashboard-overview>
-    <dashboard-panel fxLayout="column" [dashboard]="selectedDashboard"
+    <dashboard-panel fxLayout="column" [(editMode)]="editMode" [dashboard]="selectedDashboard"
                      style="height:100%;" *ngIf="dashboardTabSelected">
 
     </dashboard-panel>
