--- a/ui/src/app/connect/new-adapter/component/dialog-adapter-started.html
+++ b/ui/src/app/connect/new-adapter/component/dialog-adapter-started.html
@@ -79,7 +79,9 @@
                         <tbody id="preview-data-rows-id">
                         <tr *ngFor="let property of streamDescription.eventSchema.eventProperties">
                             <td>{{property.properties.runtimeName}}</td>
-                            <td>{{runtimeData[property.properties.runtimeName]}}</td>
+                            <td *ngIf="isImage(property)"> <img src="data:image/png;base64,{{runtimeData[property.properties.runtimeName]}}" style="max-width: 150px;" /> </td>
+                            <td *ngIf="isTimestamp(property)">{{runtimeData[property.properties.runtimeName] | date:'yyyy-MM-dd HH:mm:ss '}}</td>
+                            <td *ngIf="hasNoDomainProperty(property)">{{runtimeData[property.properties.runtimeName]}}</td>
                         </tr>
                         </tbody>
                     </table>
