Dashboard items can be resized

--- a/ui/src/app/dashboard-v2/components/grid/dashboard-grid.component.html
+++ b/ui/src/app/dashboard-v2/components/grid/dashboard-grid.component.html
@@ -5,7 +5,7 @@
 <gridster [options]="options" [ngClass]="editMode ? 'edit' : ''">
     <ng-container *ngFor="let item of dashboard.widgets">
         <gridster-item [item]="item">
-            <dashboard-widget [widget]="item" [editMode]="editMode"></dashboard-widget>
+            <dashboard-widget [item]="item" [widget]="item" [editMode]="editMode"></dashboard-widget>
         </gridster-item>
     </ng-container>
 </gridster>
