--- a/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard-v2/components/panel/dashboard-panel.component.html
@@ -7,5 +7,5 @@
             visualization</button>
     </div>
 
-    <dashboard-grid [editMode]="editMode" [dashboard]="dashboard" [options]="options" class="h-100"></dashboard-grid>
+    <dashboard-grid [editMode]="editMode" [dashboard]="dashboard" class="h-100"></dashboard-grid>
 </div>
