--- a/ui/src/app/connect/static-properties/static-property.component.html
+++ b/ui/src/app/connect/static-properties/static-property.component.html
@@ -41,6 +41,10 @@
     (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty" [adapterId]="adapterId">
 </app-static-file-input>
 
+<app-static-color-picker *ngIf="isColorPickerStaticProperty(staticProperty)"
+                       (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
+</app-static-color-picker>
+
 <app-static-runtime-resolvable-any-input *ngIf="isRuntimeResolvableAnyStaticProperty(staticProperty)"
                       (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty"></app-static-runtime-resolvable-any-input>
 
