--- a/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
@@ -23,16 +23,10 @@
         </p>
     </div>
     <div fxFlex fxLayout="row">
-        <form fxFlex [formGroup]="freeTextForm" style="padding-left: 10px;">
-            <mat-form-field fxFlex>
-                <input fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value"
-                       formControlName="freeStaticText" (ngModelChange)="valueChange(staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value)"
-                       required>
-
-                <mat-error *ngIf="!hasInput">
-                    {{errorMessage}}
-                </mat-error>
-            </mat-form-field>
-        </form>
+                <mat-checkbox *ngFor="let property of availableProperties"
+                              (change)="selectOption(property, $event)"
+                              style="margin-left: 10px;">
+                    {{getName(property)}}
+                </mat-checkbox>
     </div>
 </div>
