Fix bug in mapping property component

--- a/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
@@ -26,7 +26,7 @@
                 <mat-checkbox *ngFor="let property of availableProperties"
                               (change)="selectOption(property, $event)"
                               style="margin-left: 10px;">
-                    {{getName(property)}}
+                    {{property.runtimeName}}
                 </mat-checkbox>
     </div>
 </div>
