--- a/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
@@ -28,7 +28,7 @@
                 <!--<mat-form-field class="example-full-width">-->
                 <mat-select [placeholder]="staticProperty.label" [(value)]="staticProperty.selectedProperty">
                     <mat-option *ngFor="let property of availableProperties " [value]="property.propertySelector">
-                        {{getName(property)}}
+                        {{property.runtimeName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
