--- a/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-nary/static-mapping-nary.component.html
@@ -17,12 +17,12 @@
   -->
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
-    <div fxFlex="20">
+    <div fxFlex="100">
         <p>{{staticProperty.label}}: <br>
             <mat-hint class="description">{{staticProperty.description}}</mat-hint>
         </p>
     </div>
-    <div fxFlex fxLayout="row">
+    <div fxFlex="100" fxLayout="row">
                 <mat-checkbox *ngFor="let property of availableProperties"
                               (change)="selectOption(property, $event)"
                               style="margin-left: 10px;">
