--- a/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
+++ b/ui/src/app/connect/static-properties/static-mapping-unary/static-mapping-unary.component.html
@@ -17,12 +17,12 @@
   -->
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
-    <div>
+    <div fxFlex="100">
         <p>{{staticProperty.label}}: <br>
             <mat-hint class="description">{{staticProperty.description}}</mat-hint>
         </p>
     </div>
-    <div fxFlex fxLayout="row">
+    <div fxFlex="100" fxLayout="row">
         <form fxFlex [formGroup]="unaryTextForm" style="padding-left: 10px">
             <mat-form-field class="example-full-width">
                 <!--<mat-form-field class="example-full-width">-->
