STREAMPIPES-58: Dashboard widgets can be removed

--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
@@ -5,7 +5,7 @@
                 <button mat-button mat-icon-button color="white">
                     <i class="material-icons">settings</i>
                 </button>
-                <button mat-button mat-icon-button color="white">
+                <button mat-button mat-icon-button color="white" (click)="removeWidget()">
                     <i class="material-icons">clear</i>
                 </button>
             </div>
