Improve configuration of resizable charts

--- a/ui/src/app/dashboard-v2/components/widgets/line/line-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widgets/line/line-widget.component.html
@@ -1,5 +1,5 @@
-<div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel" #pbgChartContainer>
-    <ngx-charts-line-chart *ngIf="displayChart" #chart
+<div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" class="main-panel">
+    <ngx-charts-line-chart *ngIf="displayChart"
                            [showXAxisLabel]="false"
                            [showYAxisLabel]="false"
                            [timeline]="true"
